# python-template

./: CHANGELOG.md  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  bootstrap.sh  mypy.ini  pyproject.toml
{{cookiecutter.project_slug}}/src/{{ cookiecutter.project_slug }}/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_sample.py
