[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]
packages = [
    { include = "{{ cookiecutter.project_slug }}", from = "src" }
]
[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-docstrings = "*"
mypy = "^1.9.0"
bandit = "^1.7.7"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.0"
types-requests = "^2.32.0.20250328"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
